--- a/app/src/css/_colors.scss
+++ b/app/src/css/_colors.scss
@@ -1,8 +1,8 @@
-$primary-text:   #fff;
-$secondary-text: #a1a29e;
-$accent-text:    #d4ffbc;
+$primary-text:   #FFF;
+$secondary-text: #A1A29E;
+$accent-text:    #D4FFBC;
 
-$warning-color:  #ffd700;
-$divider-color:  #44453e;
+$warning-color:  #FFD700;
+$divider-color:  #44453E;
 
 $panel-gradient: linear-gradient(#373830, #272822) no-repeat fixed;
