--- a/app/src/Panel.scss
+++ b/app/src/Panel.scss
@@ -1,44 +1,44 @@
-@import 'css/_variables.scss';
+@import 'css/variables';
 
 #panel {
-    position: absolute;
-    right: 0;
-    left: 100% - $panel-width-xxl;
-    top: 0;
-    padding: 15px 20px 20px 20px;
+  position: absolute;
+  right: 0;
+  left: 100% - $panel-width-xxl;
+  top: 0;
+  padding: 15px 20px 20px;
 
-    @media(max-width: $width-xl) {
-        left: 100% - $panel-width-xl;
-    }
+  @media(max-width: $width-xl) {
+    left: 100% - $panel-width-xl;
+  }
 
-    @media(max-width: $width-l) {
-        left: 100% - $panel-width-l;
-    }
+  @media(max-width: $width-l) {
+    left: 100% - $panel-width-l;
+  }
 
-    @media(max-width: $width-m) {
-        left: 100% - $panel-width-m;
-    }
+  @media(max-width: $width-m) {
+    left: 100% - $panel-width-m;
+  }
 
-    @media(max-width: $width-s) {
-        left: 100% - $panel-width-s;
-    }
+  @media(max-width: $width-s) {
+    left: 100% - $panel-width-s;
+  }
 
-    @media(max-width: $width-mobile) {
-        position: static;
-        padding-top: 10px;
-    }
+  @media(max-width: $width-mobile) {
+    position: static;
+    padding-top: 10px;
+  }
 
-    @media(min-width: $width-mobile + 1px) {
-        max-height: 100%;
-        min-height: 100%;
-        overflow-x: hidden;
-        overflow-y: auto;
-        box-sizing: border-box;
-    }
+  @media(min-width: $width-mobile + 1px) {
+    max-height: 100%;
+    min-height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    box-sizing: border-box;
+  }
 
-    @media(max-width: $width-tiny) {
-        padding: 15px;
-    }
+  @media(max-width: $width-tiny) {
+    padding: 15px;
+  }
 }
 
 
