--- a/app/src/data/Data.scss
+++ b/app/src/data/Data.scss
@@ -1,146 +1,158 @@
-@import '../css/_colors.scss';
-@import '../css/_variables.scss';
+@import '../css/colors';
+@import '../css/variables';
 
 #loading {
-    padding-top: 20px;
-    font-size: 16px;
-    color: $secondary-text;
-    text-align: center;
-    .fa {
-        display: inline-block;
-        margin-bottom: 10px;
-        font-size: 25px;
-    }
+  padding-top: 20px;
+  font-size: 16px;
+  color: $secondary-text;
+  text-align: center;
+
+  .fa {
+    display: inline-block;
+    margin-bottom: 10px;
+    font-size: 25px;
+  }
 }
 
 #data {
 
-    h1 {
-        font-family: $title-font;
-        font-weight: 400;
-        font-size: 30px;
-        margin: 0;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
+  h1 {
+    font-family: $title-font;
+    font-weight: 400;
+    font-size: 30px;
+    margin: 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
+  h2 {
+    font-family: $title-font;
+    font-weight: 400;
+    font-size: 20px;
+    margin: 0;
+    color: $accent-text;
+  }
+
+  #tzwarning {
+    font-size: 16px;
+    color: $warning-color;
+    border: 2px solid $warning-color;
+    margin: 10px 0;
+    padding: 6px 10px 8px;
+    border-radius: 6px;
+    text-align: center;
+    text-transform: uppercase;
+    cursor: pointer;
+
+    &:hover {
+      color: $primary-text;
+      border-color: $primary-text;
+    }
+  }
+
+  #sun,
+  #moon,
+  #zone {
+    margin-top: 7px;
+    padding-top: 7px;
+    border-top: 1px solid $divider-color;
+  }
+
+  #sun-image,
+  #moon-image {
+    height: 100px;
+    width: 100px;
+    float: left;
+    margin-right: 15px;
+    margin-top: 2px;
+    margin-bottom: 15px;
+
+    @media(max-width: $width-tiny) {
+      width: 80px;
+      height: 80px;
+    }
+  }
+
+  .row-special {
+    padding-top: 23px;
+    font-size: 150%;
+  }
+
+  .row {
+    font-size: 18px;
+    margin-top: 5px;
+
+    .label {
+      color: $accent-text;
+      display: block;
+      width: 65px;
+      padding-top: 7px;
+      float: left;
     }
 
-    h2 {
-        font-family: $title-font;
-        font-weight: 400;
-        font-size: 20px;
-        margin: 0;
-        color: $accent-text;
+    .value {
+      font-size: 25px;
+      color: $primary-text;
     }
 
-    #tzwarning {
-        font-size: 16px;
-        color: $warning-color;
-        border: 2px solid $warning-color;
-        margin: 10px 0 10px 0;
-        padding: 6px 10px 8px;
-        border-radius: 6px;
-        text-align: center;
-        text-transform: uppercase;
-        cursor: pointer;
-        &:hover {
-            color: $primary-text;
-            border-color: $primary-text;
-        }
+    .zone {
+      color: $secondary-text;
+    }
+  }
+
+  #phase {
+    .label {
+      padding-top: 6px;
     }
 
-    #sun, #moon, #zone {
-        margin-top: 7px;
-        padding-top: 7px;
-        border-top: 1px solid $divider-color;
+    .value {
+      font-size: 18px;
+      padding-top: 6px;
+      display: inline-block;
+    }
+  }
+
+  #zone {
+    padding-top: 15px;
+
+    #zone-header {
+      color: #FFF;
+      display: block;
+      font-size: 16px;
     }
 
-    #sun-image, #moon-image {
-        height: 100px;
-        width: 100px;
-        float: left;
-        margin-right: 15px;
-        margin-top: 2px;
-        margin-bottom: 15px;
-        @media(max-width: $width-tiny) {
-            width: 80px !important;
-            height: 80px !important;
-        }
+    #zone-name {
+      color: #D5D5D3;
+      display: block;
+      font-size: 100%;
+      margin-bottom: 5px;
     }
 
-    .row-special {
-        padding-top: 23px;
-        font-size: 150%;
+    #zone-link {
+      font-size: 22px;
+      float: right;
+      color: #A1A29E;
+
+      &:hover {
+        color: #FFF;
+      }
     }
+  }
 
-    .row {
-        font-size: 18px;
-        margin-top: 5px;
-
-        .label {
-            color: $accent-text;
-            display: block;
-            width: 65px;
-            padding-top: 7px;
-            float: left;
-        }
-
-        .value {
-            font-size: 25px;
-            color: $primary-text;
-        }
-
-        .zone {
-            color: $secondary-text;
-        }
-    }
-
-    #phase {
-        .label {
-            padding-top: 6px;
-        }
-
-        .value {
-            font-size: 18px;
-            padding-top: 6px;
-            display: inline-block;
-        }
-    }
-
+  &.loading {
+    .value,
+    .zone,
+    .row-special,
     #zone {
-        padding-top: 15px !important;
-
-        #zone-header {
-            color: #fff;
-            display: block;
-            font-size: 16px;
-        }
-
-        #zone-name {
-            color: #d5d5d3;
-            display: block;
-            font-size: 100%;
-            margin-bottom: 5px;
-        }
-
-        #zone-link {
-            font-size: 22px;
-            float: right;
-            color: #a1a29e;
-            &:hover {
-                color: #fff;
-            }
-        }
+      opacity: .3;
     }
+  }
 
-    &.loading .row .value, &.loading .row .zone, &.loading .row-special, &.loading #zone {
-        opacity: 0.3;
-    }
-
-    a.pdf {
-        display: block;
-        float: left;
-        margin: 10px 0;
-    }
+  .pdf {
+    display: block;
+    float: left;
+    margin: 10px 0;
+  }
 
 }
